fix - remove search
